<resources>
    <string name="app_name">21110163_DaoHoangDang_TodoList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="title">Todo List</string>
    <string name="prompt_username">Enter username...</string>
    <string name="prompt_password">Enter password...</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_add">Add task</string>
    <string name="add_content">Enter content...</string>
    <string name="add_date">Select date...</string>
    <string name="add_time">Select time...</string>
    <string name="add_task">Add</string>
    <string name="update_task">Update</string>
</resources>