<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="10dp"
    tools:context=".activity.EditTaskFormActivity">

    <EditText
        android:id="@+id/contentEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="9dp"
        android:background="@drawable/text_input_background"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif"
        android:text="@string/add_content"
        android:textColor="#808080"/>

    <EditText
        android:id="@+id/dateEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="9dp"
        android:background="@drawable/text_input_background"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/add_date"
        android:textColor="#808080"
        android:inputType="none"/>

    <EditText
        android:id="@+id/timeEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="9dp"
        android:background="@drawable/text_input_background"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/add_time"
        android:textColor="#808080"
        android:inputType="none"/>

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_background"
        android:text="@string/update_task"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:backgroundTint="@null"/>
</LinearLayout>