<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="50dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".fragment.SignInFragment">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/text_input_background"
        android:autofillHints="phone"
        android:fontFamily="sans-serif"
        android:text="@string/prompt_username"
        android:textColor="#808080"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="9dp"
        android:background="@drawable/text_input_background"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/prompt_password"
        android:textColor="#808080"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/linear"
        app:layout_constraintEnd_toEndOf="@+id/linear"
        app:layout_constraintTop_toBottomOf="@+id/linear" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@drawable/button_background"
        android:fontFamily="sans-serif"
        android:text="@string/action_sign_in"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:backgroundTint="@null"/>

</LinearLayout>